[package]
name = "rustgpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chatgpt_rs = "1.1.13"
dotenv = "0.15.0"
termimad = "0.23.2"
text_io = "0.1.12"
tokio = { version = "1.29.1", features = ["full"] }
